@@ -1,11 +1,7 @@
 
 %%% provide the typical uuid namespaces
--define(UUID_NAMESPACE_DNS,  <<107,167,184, 16,157,173, 17,209,
-                               128,180,  0,192, 79,212, 48,200>>).
--define(UUID_NAMESPACE_URL,  <<107,167,184, 17,157,173, 17,209,
-                               128,180,  0,192, 79,212, 48,200>>).
--define(UUID_NAMESPACE_OID,  <<107,167,184, 18,157,173, 17,209,
-                               128,180,  0,192, 79,212, 48,200>>).
--define(UUID_NAMESPACE_X500, <<107,167,184, 20,157,173, 17,209,
-                               128,180,  0,192, 79,212, 48,200>>).
+-define(UUID_NAMESPACE_DNS,  <<16#6ba7b8109dad11d180b400c04fd430c8:128>>).
+-define(UUID_NAMESPACE_URL,  <<16#6ba7b8119dad11d180b400c04fd430c8:128>>).
+-define(UUID_NAMESPACE_OID,  <<16#6ba7b8129dad11d180b400c04fd430c8:128>>).
+-define(UUID_NAMESPACE_X500, <<16#6ba7b8149dad11d180b400c04fd430c8:128>>).
 
